--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vitaly-97/github.io/movie-shop",
+  "homepage": "https://vitaly-97.github.io/movie-shop",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
